--- a/common/css/normalize.css
+++ b/common/css/normalize.css
@@ -10,9 +10,19 @@
 */
 
 html {
+    font-family: sans-serif;
     line-height: 1.15; /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
     -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+boyd {
+    margin: 0;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* Sections
