--- a/common/css/style.css
+++ b/common/css/style.css
@@ -1,8 +1,9 @@
 body {
     color : #333333;
+/*
     font-family: sans-serif;
+*/
 }
-
 
 p {
     font-size: 14px;
@@ -21,10 +22,10 @@ table {
     font-size: 14px;
     line-height: 1.429;
     border: 1px solid #CCCCCC;
+/*
     border-collapse: collapse;
-
+*/
     width: 100%;
-
 }
 
 table th,
