--- a/common/css/style.css
+++ b/common/css/style.css
@@ -1,68 +1,165 @@
+@import url(http://fonts.googleapis.com/css?family=Antic+Didone);
 body {
-    color : #333333;
-/*
+    color: #333333;
+    /*
     font-family: sans-serif;
 */
 }
 
-p {
+
+/* ページ */
+
+#page {
+    width: 980px;
+    margin: 0 auto;
+}
+
+
+/* ページヘッダー */
+
+#pageHead #siteTitle {
+    font-size: 30px;
+    line-height: 1.2;
+    margin-bottom: 0;
+    font-family: 'Antic Didone', serif;
+}
+
+#pageHead #catchcopy {
+    font-size: 12px;
+    line-height: 1.5;
+    margin-top: 5px;
+}
+
+
+/* ページフッター */
+
+#pageFoot {
+    border-top: solid 1px #CCCCCC;
+    margin-top: 15px;
+}
+
+#pageFoot #copyright small {
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+
+/* ページボディ*/
+
+#pageBody {
+    margin-top: 30px;
+}
+
+#pageBody:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+#pageBodyMain {
+    width: 720px;
+    float: left;
+}
+
+#pageBodySub {
+    width: 220px;
+    float: right;
+}
+
+#pageBodyMain p {
     font-size: 14px;
     line-height: 1.429;
 }
 
+
 /* リスト */
-ul li {
+
+#pageBodyMain ul li {
     font-size: 14px;
     list-style-type: square;
     line-height: 1.429;
 }
 
+
 /* 表 */
-table {
+
+#pageBodyMain table {
     font-size: 14px;
     line-height: 1.429;
     border: 1px solid #CCCCCC;
-/*
-    border-collapse: collapse;
-*/
+    /*border-collapse: collapse;*/
     width: 100%;
 }
 
-table th,
-table td {
+#pageBodyMain table th,
+#pageBodyMain table td {
     border: 1px solid #CCCCCC;
     padding: 5px 10px;
 }
 
-table th {
+#pageBodyMain table th {
     background-color: #EEEEEE;
     text-align: left;
 }
 
-table caption {
+#pageBodyMain table caption {
     text-align: left;
     font-weight: bold;
 }
 
+
 /* 図版 */
+
 figure {
     margin: 0;
 }
 
+
 /* 画像キャプション */
-figcaption {
+
+#pageBodyMain figcaption {
     font-size: 12px;
 }
 
+
 /* 見出し*/
-.pageTitle {
+
+#pageBodySub h2 {
+    font-size: 16px;
+    line-height: 1.375;
+    padding: 5px;
+    margin-top: 0;
+    border-bottom: 1px solid #CCCCCC;
+}
+
+
+/* おしらせ */
+
+#pageBodySub .newsList ul {
+    list-style: none;
+    padding: 0;
+}
+
+#pageBodySub .newsList ul li {
+    font-size: 12px;
+    line-height: 1.5;
+    margin: 10px 5px;
+}
+
+#pageBodySub .newsList ul li time {
+    font-weight: bold;
+    display: block;
+}
+
+#pageBodyMain .pageTitle {
     font-size: 26px;
     line-height: 1.231;
     background-color: #F2F2E5;
     padding: 5px 15px;
+    margin-top: 0;
 }
 
-.heading-typeA {
+#pageBodyMain .heading-typeA {
     font-size: 18px;
     line-height: 1.333;
     color: #349FA6;
@@ -70,39 +167,46 @@ figcaption {
     padding: 5px;
 }
 
-.heading-typeB {
+#pageBodyMain .heading-typeB {
     font-size: 16px;
     line-height: 1.375;
     border-left: solid 5px #E3E4D9;
     padding-left: 10px;
 }
 
-.heading-typeC { font-size: 14px; }
+#pageBodyMain .heading-typeC {
+    font-size: 14px;
+    line-height: 1.4297;
+}
+
 
 /* 区切り線・余白 */
-.articleDetailHead {
+
+#pageBodyMain .articleDetailHead {
     border-bottom: solid 1px #CCCCCC;
     margin-bottom: 30px;
     padding-bottom: 15px;
 }
 
-.articleDetailFoot {
+#pageBodyMain .articleDetailFoot {
     border-top: solid 1px #CCCCCC;
     margin-top: 30px;
     padding-top: 15px;
 }
 
-.articleDetailBody section {
+#pageBodyMain .articleDetailBody section {
     margin: 30px 0;
 }
 
+
 /* 撮影情報 */
-.creditUnit {
+
+.#pageBodyMain creditUnit {
     padding: 10px;
     border: solid 1px #CCCCCC;
 }
 
-.creditUnit p {
+#pageBodyMain .creditUnit p {
     font-size: 12px;
     line-height: 1.5;
 }
