--- a/common/css/style.css
+++ b/common/css/style.css
@@ -1,9 +1,42 @@
 @import url(http://fonts.googleapis.com/css?family=Antic+Didone);
 body {
     color: #333333;
-    /*
-    font-family: sans-serif;
-*/
+    background-image: url("../images/bg2.png"), url("../images/bg1.png");
+    background-repeat: repeat-y, repeat;
+}
+
+
+/* リンク */
+
+a {
+    color: #999966;
+}
+
+a:hover {
+    color: #996600;
+}
+
+
+/* パンくずリスト */
+
+.topicPath {
+    font-size: 12px;
+}
+
+
+/* ページの先頭へ戻る */
+
+.pagetop {
+    font-size: 12px;
+    text-align: right;
+    margin-top: 30px;
+}
+
+.pagetop a {
+    background-image: url("../images/ico_pagetop.png");
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    padding-left: 10px;
 }
 
 
@@ -28,6 +61,51 @@ body {
     font-size: 12px;
     line-height: 1.5;
     margin-top: 5px;
+}
+
+#pageHead .globalNavi {
+    border: solid #CCCCCC;
+    border-width: 1px 0;
+    padding: 10px 0;
+}
+
+#pageHead .globalNavi ul {
+    margin: 0;
+    padding: 0;
+}
+
+#pageHead .globalNavi ul:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+#pageHead .globalNavi ul li {
+    list-style: none;
+    width: 245px;
+    float: left;
+    border-left: solid 1px #CCCCCC;
+    padding: 0 10px;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.429;
+}
+
+#pageHead .globalNavi ul li:first-child {
+    border-left: none;
+}
+
+#pageHead .globalNavi ul li a {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    padding: 5px 0;
+}
+
+#pageHead .globalNavi ul li a:hover,
+#pageHead .globalNavi ul li.current a {
+    background-color: #F2F2E5;
 }
 
 
@@ -151,6 +229,25 @@ figure {
     display: block;
 }
 
+
+/* ローカルナビ */
+
+#pageBodySub .localNavi ul {
+    margin: 0 0 30px;
+    padding-left: 0;
+}
+
+#pageBodySub .localNavi ul li {
+    font-size: 14px;
+    line-height: 1.429;
+    margin-bottom: 12px;
+    list-style-type: none;
+    background-image: url("../images/ico_arrow.png");
+    background-repeat: no-repeat;
+    background-position: 0 8px;
+    padding-left: 10px;
+}
+
 #pageBodyMain .pageTitle {
     font-size: 26px;
     line-height: 1.231;
@@ -201,7 +298,7 @@ figure {
 
 /* 撮影情報 */
 
-.#pageBodyMain creditUnit {
+#pageBodyMain .creditUnit {
     padding: 10px;
     border: solid 1px #CCCCCC;
 }
