--- a/common/css/style.css
+++ b/common/css/style.css
@@ -139,6 +139,52 @@ a:hover {
     float: left;
 }
 
+#pageBodyMain .articleList {
+    border: solid 1px #CCCCCC;
+    margin-bottom: 30px;
+}
+
+#pageBodyMain .articleList a {
+    display: block;
+    padding: 10px;
+    color: inherit;
+    text-decoration: none;
+}
+
+#pageBodyMain .articleList a:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+#pageBodyMain .articleList a:hover {
+    opacity: 0.7;
+}
+
+#pageBodyMain .article a .articleListText {
+    width: 370px;
+    float: right;
+}
+
+#pageBodyMain .articleList a .articleLitText h1 {
+    font-size: 26px;
+    line-height: 1.308;
+}
+
+#pageBodyMain .articleList a .articleLitText h1 {
+    font-size: 14px;
+    line-height: 1.429;
+}
+
+#pageBodyMain .articleList a .articleListImage img {
+    vertical-align: bottom;
+}
+
+#pageBodyMain .article a .articleListImage {
+    width: 300px;
+    float: left;
+}
+
 #pageBodySub {
     width: 220px;
     float: right;
@@ -306,4 +352,136 @@ figure {
 #pageBodyMain .creditUnit p {
     font-size: 12px;
     line-height: 1.5;
+}
+
+
+/* センター寄せ画像 */
+
+#pageBodyMain .imageCenter {
+    text-align: center;
+    border-bottom: 1px dotted #CCCCCC;
+    padding-bottom: 30px;
+    margin: 30px 0;
+}
+
+#pageBodyMain .btn a {
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #FFFFFF;
+    background-color: #058BA9;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border-radius: 5px;
+    background-image: linear-gradient(to bottom, #92CDDB, #058BA9);
+    border: 1px solid #058BA9;
+    box-shadow: 1px 1px 0 #9DDDED inset;
+    text-shadow: 0px -1px 0 #333333;
+    display: inline-block;
+}
+
+#pageBodyMain .btn {
+    text-align: center;
+    padding-bottom: 20px;
+    margin: 30px 0;
+    border-bottom: 1px dotted #CCCCCC;
+}
+
+#pageBodyMain .btn a:hover {
+    opacity: 0.7;
+}
+
+#pageBody .mainVisual {
+    position: relative;
+}
+
+#pageBody .mainVisual img {
+    vertical-align: bottom;
+}
+
+#pageBody .mainVisual .mainVisualText {
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+    color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 400px;
+    padding: 15px 25px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#pageBody .mainVisual .mainVisualText h1 {
+    font-size: 26px;
+    line-height: 1.231;
+    margin: 0;
+}
+
+#pageBody .mainVisual .mainVisualText p {
+    font-size: 12px;
+    line-height: 1.5;
+    margin-bottom: 0;
+}
+
+#pageBody .portfolioIndex {
+    margin-top: 40px;
+}
+
+#pageBody .portfolioIndex:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+#pageBody .portfolioIndex article {
+    width: 300px;
+    float: left;
+    margin-left: 40px;
+}
+
+#pageBody .portfolioIndex article:first-child {
+    margin-left: 0;
+}
+
+#pageBody .portfolioIndex article h2 {
+    font-size: 18px;
+    margin: 5px 0;
+}
+
+#pageBody .portfolioIndex article p {
+    margin-top: 0;
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+#pageBody .news {
+    margin-top: 40px;
+}
+
+#pageBody .news h1 {
+    font-size: 20px;
+    border-bottom: 1px solid #CCCCCC;
+    padding: 5px 0;
+}
+
+#pageBody .news table {
+    width: 100%;
+}
+
+#pageBody .news table tr td {
+    width: 100%;
+}
+
+#pageBody .news table tr th,
+#pageBody .news table tr td {
+    font-size: 14px;
+    line-height: 1.429;
+    border-bottom: 1px dotted #CCCCCC;
+    padding: 10px 0;
+    vertical-align: top;
+}
+
+#pageBody .news table tr th {
+    white-space: nowrap;
+    padding-right: 30px;
 }
