--- a/common/css/style.css
+++ b/common/css/style.css
@@ -349,6 +349,26 @@ figure {
     border: solid 1px #CCCCCC;
 }
 
+#pageBodyMain .creditUnit:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+#pageBodyMain .creditUnit .creditUnitText {
+    float: right;
+    width: 378px;
+}
+
+#pageBodyMain .creditUnit .creditUnitMap {
+    float: left;
+    width: 300px;
+}
+
+#pageBodyMain .creditUnit .creditUnitMap iframe {
+    vertical-align: bottom;
+}
+
 #pageBodyMain .creditUnit p {
     font-size: 12px;
     line-height: 1.5;
@@ -421,6 +441,16 @@ figure {
     font-size: 12px;
     line-height: 1.5;
     margin-bottom: 0;
+}
+
+#pageBody .mainVisual ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+#pageBody .mainVisual ul li {
+    position: relative;
 }
 
 #pageBody .portfolioIndex {
